--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-PORT=8000
+PORT=5000
 MONGOURI=mongodb+srv://user:BqHTH7nV1ah9hTUY@cluster0.dj5xk.mongodb.net/dot?retryWrites=true&w=majority
 SECRET=otichan
+JWT_SECRET=otichanpro
