--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.5"
+    "mongoose": "^6.1.5",
+    "multer": "^1.4.4",
+    "sharp": "^0.26.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
